<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.bangkit.NusArt.view.fragment.home.HomeFragment"
        android:label="@string/home_navtext"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.capstone.bangkit.NusArt.view.fragment.map.MapsFragment"
        android:label="@string/Map_navtext"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.bangkit.NusArt.view.fragment.profile.ProfileFragment"
        android:label="@string/Profile_navtext"
        tools:layout="@layout/fragment_profile" />
</navigation>